--- a/html/index.html
+++ b/html/index.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>yeah</title>
+    <!-- 2. Embedding style (style tag 사용하기)  -->
     <style>
+        /* CSS */
+        /* h1 : 선택자 (Selector) */
+        /* color : 속성 (Property) */
+        /* aqua : 값 (Value) */
+        /* { } : 선언 블록  */
+        /* color : aqua;  : 선언문 */
+        /* 전체 : 규칙 (Rule) */
+        /* 규칙 묶음 : 스타일 시트 (Stylesheet) */
         h1{
             color: aqua;
-
         }
         
     </style>
