D10 | 190115 AM | css & swexpert d3

--- a/html/index.html
+++ b/html/index.html
@@ -20,6 +20,8 @@
         }
         
     </style>
+    <!-- 3. Link style (css 파일 link) -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- 실제 내용들어가는 body-->
