--- a/html/markup_ex.html
+++ b/html/markup_ex.html
@@ -44,6 +44,7 @@
     <section id="web">
         <h1><a href="https://developer.mozilla.org/ko/" target="_self">웹</a></h1>
         <h2>기초</h2>
+        <!-- 1. Inline style (인라인 스타일) -->
         <ul style="list-style-type: circle">
             <!-- none,square,circle,lower-alpha,upper-roman -->
             <li style="list-style-type: square">HTML</li>
