--- a/html/03_box.html
+++ b/html/03_box.html
@@ -33,9 +33,30 @@
             box-sizing: border-box;
             
         }
+        /* 1.block */
+        /* div, h1~h2, p , ol, ul,li,table,form */
+        /* 2.inline */
+        /* span,a,strong,em,img,input */
+        /* width,height,margin-top,margin-bottom 사용불가 */
+        /* 3.inline-block */
+        /* inline + block 특징 섞어서 가지고 있음. */
+        /* 4. none */
+        /* 화면에 보이지 않음. (공간조차 사라짐) */
+        .box2{
+            display: inline;
+            border: 2px solid red;
+            background-color: gray;
+            /* visibility: visible; (기본값) */
+            /* visibility: hidden; */
+            opacity: 0.2;
+        }
     </style>
 </head>
 <body>
+    <div class="box2">
+        이것은 박스2입니다.
+    </div>
+    박스와박스사이입니다.
     <div class="box">
         이것은 박스입니다.
     </div>
