--- a/html/07_css_priority.html
+++ b/html/07_css_priority.html
@@ -11,7 +11,7 @@
 
 <body>
     <div>
-        <h1 id="toffee" class="latte" style="color: green">아이스 토피넛 라떼</h1>
+        <h1 id="toffee" class="latte">아이스 토피넛 라떼</h1>
     </div>
 </body>
 
